@@ -1,5 +1,8 @@
 2013-10-15  Carl Hetherington  <cth@carlh.net>
 
+	* Restore up/down buttons for simple content time
+	movements.
+
 	* Include film title in KDM filenames.
 
 	* Allow no-stretch scaling like in DVD-o-matic.
